--- a/index.html
+++ b/index.html
@@ -97,46 +97,46 @@
     // });
     // (new ZoomViewer).addTo(mymap);
     var tajIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png',
+      iconSize: [40, 40],
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var GreatWallIcon = L.icon({
-      iconUrl: 'https://upload.wikimedia.org/wikipedia/commons/2/2b/1_dfs.png', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconUrl: 'https://upload.wikimedia.org/wikipedia/commons/2/2b/1_dfs.png',
+      iconSize: [40, 40],
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var JordanIcon = L.icon({
       iconUrl: 'https://png.pngtree.com/png-vector/20210214/ourmid/pngtree-location-marker-png-image_2921053.jpg', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconSize: [40, 40], 
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var ChristIcon = L.icon({
       iconUrl: 'https://www.clipartmax.com/png/middle/114-1148546_base-marker-gps-location-map-map-marker-marker-icon.png', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconSize: [40, 40],
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var ItzaIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/128/447/447031.png', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconUrl: 'https://cdn-icons-png.flaticon.com/128/447/447031.png',
+      iconSize: [40, 40],
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var PeruIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/128/13204/13204127.png', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconUrl: 'https://cdn-icons-png.flaticon.com/128/13204/13204127.png',
+      iconSize: [40, 40],
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var RomeIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/128/8690/8690430.png', // image link
-      iconSize: [40, 40],  // size of the icon (width, height)
-      iconAnchor: [20, 40], // point of the icon that will be placed at the marker’s location
-      popupAnchor: [0, -35] // where the popup opens relative to the icon
+      iconUrl: 'https://cdn-icons-png.flaticon.com/128/8690/8690430.png',
+      iconSize: [40, 40],
+      iconAnchor: [20, 40],
+      popupAnchor: [0, -35]
     });
     var tajMarker = L.marker([27.174961, 78.042385], { icon: tajIcon }).addTo(mymap);
     var GreatWallMarker= L.marker([40.334245, 116.477652], { icon: GreatWallIcon }).addTo(mymap);
